gccida/c1/try_split
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/emit-rtl.c:3598:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)trial[1]; 
               ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/emit-rtl.c:3606:13: error: expected identifier or '('
 struct arg = split_branch_probability; 
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/emit-rtl.c:3650:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)v8->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/emit-rtl.c:3660:28: error: use of undeclared identifier 'machine_mode'
v21 = gen_rtx_CONST_INT( ( machine_mode)v20, arg); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/emit-rtl.c:3685:25: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)( v24 + 64) = trial[4]; 
                        ^ ~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/emit-rtl.c:3691:30: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
for ( v25.rtwint = ( __int64)trial[3].fld[0]; v25.rtwint; v25.rtwint = *( __int64 *)( v25.rtwint + 16) ) 
                             ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/emit-rtl.c:3723:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v25.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/emit-rtl.c:3742:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v25.rtwint + 2), 
  ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_split/src/obj/emit-rtl.o] Error 1
